Add Binding.PropertyAdaptor class with optional handlers.
Update Property.Sync to use Binding.PropertyAdaptor.

Change BindingContextControl back to always call update() on sync
without checking equality, and update docs.